--- a/examples/ExpectationModel_tests.ipynb
+++ b/examples/ExpectationModel_tests.ipynb
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,19 +649,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "M = mdl.Model()\n",
-    "M.add(layers.DiagExpectationUnitLayer(784,25))\n",
-    "M.add(layers.DiagExpectationUnitLayer(25,10))\n",
+    "M.add(layers.DiagExpectationUnitLayer(784,10))\n",
+    "M.add(layers.DiagExpectationUnitLayer(10,10))\n",
+    "M.add(layers.DiagExpectationUnitLayer(10,10))\n",
     "M.add(layers.SoftMaxLayer(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -671,47 +672,29 @@
      "output_type": "stream",
      "text": [
       "CMA on 1 cpu(s) enabled\n",
-      "(16_w,33)-aCMA-ES (mu_w=9.4,w_1=19%) in dimension 19920 (seed=1076279, Sun Nov  5 11:06:26 2017)\n",
+      "(15_w,30)-aCMA-ES (mu_w=8.6,w_1=20%) in dimension 8100 (seed=1014135, Mon Nov  6 06:23:00 2017)\n",
       "Iterat #Fevals   function value  axis ratio  sigma  min&max std  t[m:s]\n",
-      "    1     33 7.789078448798776e-01 1.0e+00 9.99e-01  1e+00  1e+00 1:19.1\n",
-      "    2     66 7.341405507715238e-01 1.0e+00 9.99e-01  1e+00  1e+00 5:28.1\n",
-      "    3     99 6.988316886395892e-01 1.0e+00 9.98e-01  1e+00  1e+00 8:59.5\n",
-      "    4    132 7.418461020625432e-01 1.0e+00 9.98e-01  1e+00  1e+00 12:36.8\n",
-      "    5    165 7.515872544559519e-01 1.0e+00 9.97e-01  1e+00  1e+00 14:23.5\n",
-      "    6    198 6.963890902053331e-01 1.0e+00 9.97e-01  1e+00  1e+00 15:42.0\n",
-      "    7    231 7.345505329969095e-01 1.0e+00 9.96e-01  1e+00  1e+00 17:17.3\n",
-      "    8    264 7.458564557417338e-01 1.0e+00 9.96e-01  1e+00  1e+00 18:36.6\n",
-      "    9    297 7.252604780850619e-01 1.0e+00 9.95e-01  1e+00  1e+00 19:41.0\n",
-      "   10    330 6.925738973551295e-01 1.0e+00 9.95e-01  1e+00  1e+00 20:54.1\n",
-      "   11    363 6.799194048134154e-01 1.0e+00 9.94e-01  1e+00  1e+00 22:01.4\n",
-      "   12    396 6.954606275863006e-01 1.0e+00 9.94e-01  1e+00  1e+00 23:20.8\n",
-      "   13    429 6.947998837164042e-01 1.0e+00 9.93e-01  1e+00  1e+00 24:36.3\n",
-      "   14    462 6.448565102438768e-01 1.0e+00 9.93e-01  1e+00  1e+00 25:48.9\n",
-      "   15    495 6.554341538789520e-01 1.0e+00 9.92e-01  1e+00  1e+00 26:55.2\n",
-      "   16    528 6.480264879682416e-01 1.0e+00 9.92e-01  1e+00  1e+00 28:10.0\n",
-      "   17    561 6.290524321843397e-01 1.0e+00 9.91e-01  1e+00  1e+00 29:07.7\n",
-      "   18    594 5.681239386364964e-01 1.0e+00 9.91e-01  1e+00  1e+00 30:11.3\n",
-      "   19    627 5.626404305767732e-01 1.0e+00 9.90e-01  1e+00  1e+00 31:13.6\n",
-      "   20    660 5.784032851751234e-01 1.0e+00 9.90e-01  1e+00  1e+00 32:12.5\n",
-      "   21    693 5.796559114957169e-01 1.0e+00 9.89e-01  1e+00  1e+00 33:08.9\n",
-      "   22    726 5.546313572553354e-01 1.0e+00 9.89e-01  1e+00  1e+00 34:07.9\n",
-      "   23    759 5.729177562171082e-01 1.0e+00 9.88e-01  1e+00  1e+00 35:04.8\n",
-      "   24    792 5.553752326001927e-01 1.0e+00 9.88e-01  1e+00  1e+00 36:00.2\n",
-      "   25    825 5.580593984494876e-01 1.0e+00 9.87e-01  1e+00  1e+00 36:57.3\n",
-      "   26    858 5.515336384329588e-01 1.0e+00 9.87e-01  1e+00  1e+00 37:51.1\n",
-      "   27    891 5.493891762565291e-01 1.0e+00 9.86e-01  1e+00  1e+00 38:44.7\n",
-      "   28    924 5.333659796860237e-01 1.0e+00 9.86e-01  1e+00  1e+00 39:36.8\n",
-      "   29    957 5.434696873849977e-01 1.0e+00 9.86e-01  1e+00  1e+00 40:28.8\n",
-      "   30    990 5.202038099210050e-01 1.0e+00 9.85e-01  1e+00  1e+00 41:27.4\n",
-      "   31   1023 5.141947977320531e-01 1.0e+00 9.85e-01  1e+00  1e+00 42:23.3\n",
-      "   32   1056 5.079828723721386e-01 1.0e+00 9.84e-01  1e+00  1e+00 43:17.7\n"
+      "    1     30 7.936054770916866e-01 1.0e+00 9.99e-01  1e+00  1e+00 0:02.1\n",
+      "    2     60 7.269215704847466e-01 1.0e+00 9.98e-01  1e+00  1e+00 0:48.6\n",
+      "    3     90 7.491181930297051e-01 1.0e+00 9.96e-01  1e+00  1e+00 1:40.3\n",
+      "    4    120 6.706496100472265e-01 1.0e+00 9.95e-01  1e+00  1e+00 2:28.2\n",
+      "    5    150 6.593275743852143e-01 1.0e+00 9.94e-01  1e+00  1e+00 3:09.8\n",
+      "    6    180 6.707498652177000e-01 1.0e+00 9.93e-01  1e+00  1e+00 3:51.3\n",
+      "    7    210 6.377900989630486e-01 1.0e+00 9.92e-01  1e+00  1e+00 4:31.4\n",
+      "    8    240 5.693552047033552e-01 1.0e+00 9.91e-01  1e+00  1e+00 5:10.0\n",
+      "    9    270 6.140835301676427e-01 1.0e+00 9.90e-01  1e+00  1e+00 5:45.7\n",
+      "   10    300 5.745519164220565e-01 1.0e+00 9.88e-01  1e+00  1e+00 6:21.5\n",
+      "CMAEvolutionStrategyResult(xbest=array([-0.44276379,  1.66024183,  2.75238029, ...,  3.30734208,\n",
+      "        9.50003775,  5.25180673]), fbest=0.5693552047033552, evals_best=219, evaluations=300, iterations=10, xfavorite=array([ 0.20797631,  1.40702093,  0.95813351, ...,  3.40356227,\n",
+      "       10.74458251,  3.20089619]), stds=array([0.98847288, 0.9884732 , 0.98847301, ..., 0.98852235, 0.98852245,\n",
+      "       0.98852241]))\n"
      ]
     }
    ],
    "source": [
     "minim = minimizer.CMA(False)\n",
     "\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train, maxiter=100)"
+    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train, maxiter=10)"
    ]
   },
   {
