softmax backprop mods

--- a/examples/MNIST_exploration.ipynb
+++ b/examples/MNIST_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,32 +204,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0 in 0.10(s), cost = 4.348408\n",
+      "Iteration 100 in 10.69(s), cost = 1.302175\n",
+      "Iteration 200 in 21.20(s), cost = 1.134513\n",
+      "Iteration 300 in 31.95(s), cost = 1.058071\n",
+      "Iteration 400 in 42.90(s), cost = 1.000400\n",
+      "Iteration 500 in 53.93(s), cost = 0.963352\n",
+      "Iteration 600 in 64.94(s), cost = 0.933435\n",
+      "Iteration 700 in 75.63(s), cost = 0.876319\n",
+      "Iteration 800 in 82.89(s), cost = 0.810045\n",
+      "Iteration 900 in 91.73(s), cost = 0.766195\n",
+      "('Cost: ', 0.7337537302427808)\n",
+      "('Sol: ', array([ 2.52333813, -0.59303184,  1.22115297, ...,  2.01471075,\n",
+      "        5.56609287,  2.61835274]))\n",
+      "Time: 100 s\n"
+     ]
+    }
+   ],
    "source": [
     "M = mdl.Model()\n",
     "#M.add(layers.Linear(784,1))\n",
-    "M.add(layers.NonLinear(784,1))\n",
+    "M.add(layers.NonLinear(784,3))\n",
+    "M.add(layers.NonLinear(3,3))\n",
+    "M.add(layers.Linear(3,1))\n",
     "\n",
     "minim = minimizer.SGD()\n",
-    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), lr=1, maxiter=10000, batch_size=1000)"
+    "sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), lr=100, maxiter=1000, batch_size=1000)\n",
+    "\n",
+    "#minim = minimizer.BFGS()\n",
+    "#sol=minim.train(mse(), M, np.transpose(X_train), Y_train.reshape(1,len(Y_train)), maxiter=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.93      0.66      0.77      1001\n",
+      "          1       0.72      0.75      0.73      1127\n",
+      "          2       0.26      0.21      0.23       991\n",
+      "          3       0.36      0.44      0.40      1032\n",
+      "          4       0.10      0.04      0.05       980\n",
+      "          5       0.24      0.66      0.35       863\n",
+      "          6       0.26      0.15      0.19      1014\n",
+      "          7       0.29      0.16      0.21      1070\n",
+      "          8       0.27      0.61      0.37       944\n",
+      "          9       0.00      0.00      0.00       978\n",
+      "\n",
+      "avg / total       0.35      0.37      0.34     10000\n",
+      "\n",
+      "[[661 184  94  32   9  19   1   1   0   0]\n",
+      " [  0 845 186  59  25   6   3   1   2   0]\n",
+      " [ 28  74 204 599  40  33   3   3   7   0]\n",
+      " [  9  64 250 450  93 110  36   9  11   0]\n",
+      " [  2   1   4   7  35 809  80  25  17   0]\n",
+      " [  2   3  27  42  72 566  91  44  16   0]\n",
+      " [  3   4   3   9  48 683 156  83  25   0]\n",
+      " [  0   1   9  16  18  86  93 176 671   0]\n",
+      " [  0   0  11  28  14  62  94 159 576   0]\n",
+      " [  2   1   1   3   5  15  32  98 821   0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# On train set\n",
     "P=np.abs(np.round(np.real(M.predict(np.transpose(X_train)))))\n",
@@ -241,9 +290,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.90      0.64      0.75       980\n",
+      "          1       0.70      0.75      0.72      1135\n",
+      "          2       0.27      0.20      0.23      1032\n",
+      "          3       0.33      0.40      0.36      1010\n",
+      "          4       0.07      0.02      0.03       982\n",
+      "          5       0.23      0.60      0.33       892\n",
+      "          6       0.20      0.12      0.15       958\n",
+      "          7       0.21      0.13      0.16      1028\n",
+      "          8       0.27      0.60      0.37       974\n",
+      "          9       0.00      0.00      0.00      1009\n",
+      "\n",
+      "avg / total       0.32      0.35      0.32     10000\n",
+      "\n",
+      "[[626 169  99  20  25  30   6   3   2   0]\n",
+      " [  1 853 194  47  18   6   7   7   2   0]\n",
+      " [ 33  82 211 591  35  32  20  12  16   0]\n",
+      " [ 21  78 187 405  71 137  48  39  24   0]\n",
+      " [  0   4   5   2  22 783  78  62  26   0]\n",
+      " [  3  13  33  58  52 534  89  70  40   0]\n",
+      " [  6  11  13  22  61 637 117  64  27   0]\n",
+      " [  0   7  13  33  21  74  65 136 679   0]\n",
+      " [  0   5  13  30  24  86  88 143 585   0]\n",
+      " [  4   1   7   6   6  37  62  98 788   0]]\n"
+     ]
+    }
+   ],
    "source": [
     "# On test set\n",
     "P=np.abs(np.round(np.real(M.predict(np.transpose(X_test)))))\n",
@@ -261,9 +342,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0 in 0.50(s), cost = 4.009833\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-f143167c9cdf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mminim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mminimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0msol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mminim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mM\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmomentum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnesterov\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/krefl/RTBM/rtbm/minimizer.pyc\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, cost, model, x_data, y_data, maxiter, batch_size, lr, momentum, nesterov, noise, log_step)\u001b[0m\n\u001b[1;32m    148\u001b[0m                 \u001b[0mXout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeed_through\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m                 \u001b[0mC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXout\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m                 \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackprop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXout\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdata_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m                 \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_parameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/krefl/RTBM/rtbm/model.pyc\u001b[0m in \u001b[0;36mbackprop\u001b[0;34m(self, E)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mreversed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_layers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_layers\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackprop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/krefl/RTBM/rtbm/layers.py\u001b[0m in \u001b[0;36mbackprop\u001b[0;34m(self, E)\u001b[0m\n\u001b[1;32m    518\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gradQ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 520\u001b[0;31m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    521\u001b[0m         \u001b[0;31m# W grad\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    522\u001b[0m         \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkappa\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/numpy-1.14.0.dev0+d607099-py2.7-linux-x86_64.egg/numpy/core/fromnumeric.pyc\u001b[0m in \u001b[0;36mmean\u001b[0;34m(a, axis, dtype, out, keepdims)\u001b[0m\n\u001b[1;32m   2925\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2926\u001b[0m     return _methods._mean(a, axis=axis, dtype=dtype,\n\u001b[0;32m-> 2927\u001b[0;31m                           out=out, **kwargs)\n\u001b[0m\u001b[1;32m   2928\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2929\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/dist-packages/numpy-1.14.0.dev0+d607099-py2.7-linux-x86_64.egg/numpy/core/_methods.pyc\u001b[0m in \u001b[0;36m_mean\u001b[0;34m(a, axis, dtype, out, keepdims)\u001b[0m\n\u001b[1;32m     71\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m         ret = um.true_divide(\n\u001b[0;32m---> 73\u001b[0;31m                 ret, rcount, out=ret, casting='unsafe', subok=False)\n\u001b[0m\u001b[1;32m     74\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_float16_result\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m             \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mret\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process PoolWorker-15:\n",
+      "Process PoolWorker-10:\n",
+      "Process PoolWorker-13:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Process PoolWorker-11:\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Process PoolWorker-12:\n",
+      "Process PoolWorker-16:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "Traceback (most recent call last):\n",
+      "Process PoolWorker-14:\n",
+      "Process PoolWorker-9:\n",
+      "    self.run()\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Traceback (most recent call last):\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    task = get()\n",
+      "    self.run()\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 258, in _bootstrap\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "KeyboardInterrupt\n",
+      "    self.run()\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    self.run()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    task = get()\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/process.py\", line 114, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "KeyboardInterrupt\n",
+      "    racquire()\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    racquire()\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "KeyboardInterrupt\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/pool.py\", line 102, in worker\n",
+      "    racquire()\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "KeyboardInterrupt\n",
+      "    task = get()\n",
+      "  File \"/usr/lib/python2.7/multiprocessing/queues.py\", line 374, in get\n",
+      "    racquire()\n",
+      "KeyboardInterrupt\n"
+     ]
+    }
+   ],
    "source": [
     "M = mdl.Model()\n",
     "M.add(layers.DiagExpectationUnitLayer(784,1))\n",
