Multi-derivatives phase I .c optimized Seems to give some gain

--- a/tests/RiemannThetaTests.ipynb
+++ b/tests/RiemannThetaTests.ipynb
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.402056\n",
-      "0.046419\n"
+      "0.060182\n",
+      "0.05278\n"
      ]
     },
     {
@@ -38,7 +38,7 @@
        "0.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
    "source": [
     "# RT\n",
     "Q=np.zeros((1,1), dtype=complex)\n",
-    "Q[0,0]=5j\n",
+    "Q[0,0]=0.1j\n",
     "\n",
     "X = 1j*np.random.uniform(-100,100,(15000,1))\n",
     "\n",
@@ -76,8 +76,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.05246\n",
-      "0.050589\n"
+      "0.052952\n",
+      "0.048793\n"
      ]
     },
     {
@@ -119,12 +119,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.+113.09586381j 0.-100.68130276j 0.-125.66370128j ... 0.  -6.27474563j\n",
-      " 0. -43.9800779 j 0. +50.38531694j]\n",
-      "0.012648\n",
-      "[0.+113.09586381j 0.-100.68130276j 0.-125.66370128j ... 0.  -6.27474563j\n",
-      " 0. -43.9800779 j 0. +50.38531694j]\n",
-      "0.005847\n"
+      "[0.-93.32036117j 0.+69.11315717j 0.-87.97426721j ... 0.-81.68140713j\n",
+      " 0.+25.11996809j 0.+87.98216687j]\n",
+      "0.012825\n",
+      "[0.-93.32036117j 0.+69.11315717j 0.-87.97426721j ... 0.-81.68140713j\n",
+      " 0.+25.11996809j 0.+87.98216687j]\n",
+      "0.005399\n"
      ]
     },
     {
@@ -159,6 +159,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.153037\n",
+      "0.052942\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0010986328125"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ratio\n",
+    "# Multi-derivatives\n",
+    "\n",
+    "tic = time.clock()\n",
+    "t1=RiemannTheta.normalized_eval(X,Q, mode=0, derivs=np.array( [ [1], [1,1], [1,1,1] ]  )   )\n",
+    "toc = time.clock()\n",
+    "#print(t1)\n",
+    "print(toc-tic)\n",
+    "\n",
+    "\n",
+    "tic = time.clock()\n",
+    "t2=RiemannTheta.normalized_eval(X,Q, mode=1, derivs=np.array( [ [1], [1,1], [1,1,1] ]  )   )\n",
+    "toc = time.clock()\n",
+    "#print(t2)\n",
+    "\n",
+    "print(toc-tic)\n",
+    "\n",
+    "x=t1-t2\n",
+    "max(abs(x).flatten())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,34 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  1.76351931+2.03325596e-17j -19.54990722-2.74418890e-08j\n",
-      "   1.38772767+2.43228724e-17j ...   0.46072285+7.62860510e-17j\n",
-      " -20.08055583+3.14159263e+00j  -5.00371237-5.55066889e-15j]\n",
-      "0.934417\n",
-      "[  1.76351931+2.03325596e-17j -19.54990722-2.74418890e-08j\n",
-      "   1.38772767+2.43228724e-17j ...   0.46072285+7.62860510e-17j\n",
-      " -20.08055583+3.14159263e+00j  -5.00371237-5.55066889e-15j]\n",
-      "0.401756\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RT\n",
     "Q=np.zeros((1,1), dtype=complex)\n",
@@ -221,34 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  5.02265769-1.85438921e-18j -19.35782706+3.14159246e+00j\n",
-      "   4.91133136+5.85706384e-18j ...   4.33420864+2.11604544e-17j\n",
-      " -15.79016531-7.00102721e-09j  -0.44124634-2.93482370e-15j]\n",
-      "1.107136\n",
-      "[  5.02265769-1.85438921e-18j -19.35782706+3.14159246e+00j\n",
-      "   4.91133136+5.85706384e-18j ...   4.33420864+2.11604544e-17j\n",
-      " -15.79016531-7.00102721e-09j  -0.44124634-2.93482370e-15j]\n",
-      "0.488965\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tic = time.clock()\n",
     "t1=RiemannTheta.log_eval(X,Q, mode=0, derivs=[[1]])\n",
@@ -269,34 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  26.02710201+5.16708703e-18j -166.55596019+1.89493952e-04j\n",
-      "   33.90639678-2.60426352e-15j ...   48.1097948 +4.01976226e-15j\n",
-      "  170.91115929-8.29717209e-06j   95.81943174-7.71935685e-13j]\n",
-      "1.519129\n",
-      "[  26.02710201+5.16708703e-18j -166.55596019+1.89493952e-04j\n",
-      "   33.90639678-2.60426352e-15j ...   48.1097948 +4.01976226e-15j\n",
-      "  170.91115929-8.29717209e-06j   95.81943174-7.71935685e-13j]\n",
-      "0.506858\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.000000001041250292910165"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ratio \n",
     "# Derivatives\n",
